# lyzard-Board

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults
components/database/: CMakeLists.txt  database.c  database.h
components/legal/: CMakeLists.txt  legal.c  legal.h
components/ui/: CMakeLists.txt  ui.c  ui.h
docs/: README_FR.md
main/: CMakeLists.txt  idf_component.yml  main.c
