
idf_component_register(
    SRCS "ui.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES lvgl__lvgl
)

idf_component_register(SRCS "ui.c"
                       INCLUDE_DIRS "."
                       PRIV_REQUIRES lvgl__lvgl)


                       INCLUDE_DIRS "."
                       REQUIRES lvgl)

                       INCLUDE_DIRS ".")
